--- a/paper.tex
+++ b/paper.tex
@@ -31,10 +31,10 @@
 \begin{document}
 
 \title{Social Feedback For Robotic Collaboration}
-\author{Author Names Omitted for Anonymous Review. Paper-ID [add your ID here]}
+%\author{Author Names Omitted for Anonymous Review. Paper-ID [add your ID here]}
 
-%\author{\authorblockN{Emily Wu, Nakul Gopalan, James MacGlashan, Stefanie Tellex, and Lawson L.S. Wong }
-%\authorblockA{Brown University}}
+\author{\authorblockN{Emily Wu, Nakul Gopalan, James MacGlashan, Stefanie Tellex, and Lawson L.S. Wong }
+\authorblockA{Brown University}}
 
 \maketitle
 
